--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -23,7 +23,7 @@
               <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="paginas/accesorios.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="../paginas/accesorios.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       ACCESORIOS
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
@@ -32,10 +32,10 @@
                       
                     </ul>
                   <li class="nav-item">
-                    <a class="nav-link" href="paginas/nosotros.html">NOSOTROS</a>
+                    <a class="nav-link" href="../paginas/nosotros.html">NOSOTROS</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="paginas/celulares.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="../paginas/celulares.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       CELULARES
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
