--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -21,26 +21,26 @@
               <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="../paginas/accesorios.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="accesorios.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       ACCESORIOS
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                      <li><a class="dropdown-item" href="../paginas/accesorios.html">PC</a></li>
-                      <li><a class="dropdown-item" href="../paginas/accesorios.html">CELULAR</a></li>
+                      <li><a class="dropdown-item" href="accesorios.html">PC</a></li>
+                      <li><a class="dropdown-item" href="accesorios.html">CELULAR</a></li>
                       
                     </ul>
                   <li class="nav-item">
                     <a class="nav-link" href="../paginas/nosotros.html">NOSOTROS</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="../paginas/celulares.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="celulares.html" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       CELULARES
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                      <li><a class="dropdown-item" href="../paginas/celulares.html">APPLE</a></li>
-                      <li><a class="dropdown-item" href="../paginas/celulares.html">SAMSUMG</a></li>
+                      <li><a class="dropdown-item" href="celulares.html">APPLE</a></li>
+                      <li><a class="dropdown-item" href="celulares.html">SAMSUMG</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="../paginas/celulares.html">MOTOROLA Y XIAOMI</a></li>
+                      <li><a class="dropdown-item" href="celulares.html">MOTOROLA Y XIAOMI</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
