--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domicell</title>
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="estilos/estilos.css">
+    <link rel="stylesheet" href="css/destino.css">
 </head>
 <body>
     <header>
