--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONTACTO</title>
+    <meta name="keywords" content="contacto, direccion,facebook, instagram">
+    <meta name="description" content="contacto domicell arrecifes y nuestras redes sociales">
+    <title>Domicell contacto</title>
     <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../css/destino.css">
 
