--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="venta, celulares,computadora,accesorios,tecnico">
+    <meta name="description" content="venta de celulares nuevos y usados, venta de accesorios para pc,reparacion de celulares">
     <title>Domicell</title>
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/destino.css">
@@ -92,17 +94,13 @@
     <div class="container">
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <p class="col-md-4 mb-0 text-muted">&copy; 2022 Desarrollado por LM</p>
-    
-        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-          <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-        </a>
-    
+  
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">INICIO</a></li>
           <li class="nav-item"><a href="paginas/nosotros.html" class="nav-link px-2 text-muted">NOSOTROS</a></li>
+          <li class="nav-item"><a href="paginas/contacto.html" class="nav-link px-2 text-muted">CONTACTO</a></li>
           <li class="nav-item"><a href="paginas/celulares.html" class="nav-link px-2 text-muted">CELULARES</a></li>
           <li class="nav-item"><a href="paginas/accesorios.html" class="nav-link px-2 text-muted">ACCESORIOS</a></li>
-          <li class="nav-item"><a href="paginas/contacto.html" class="nav-link px-2 text-muted">CONTACTO</a></li>
         </ul>
       </footer>
     </div>
