--- a/paginas/celulares.html
+++ b/paginas/celulares.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Celulares</title>
+    <meta name="keywords" content="celulares, iphone, samsung, motorola">
+    <meta name="description" content="domicell catalogo de celulares">
+    <title>Domicell celulares</title>
     <link rel="stylesheet" href="../bootstrap-5.1.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../css/destino.css">
 </head>
