--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                       ACCESORIOS
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                      <li><a class="dropdown-item" href="paginas/accesorios.html">PC</a></li>
-                      <li><a class="dropdown-item" href="paginas/accesorios.html">CELULAR</a></li>
+                      <li><a class="dropdown-item" href="paginas/accesorios.html#secpc">PC</a></li>
+                      <li><a class="dropdown-item" href="paginas/accesorios.html#seccel">CELULAR</a></li>
                       
                     </ul>
                   <li class="nav-item">
@@ -39,10 +39,10 @@
                       CELULARES
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                      <li><a class="dropdown-item" href="paginas/celulares.html">APPLE</a></li>
-                      <li><a class="dropdown-item" href="paginas/celulares.html">SAMSUMG</a></li>
+                      <li><a class="dropdown-item" href="paginas/celulares.html#secapp">APPLE</a></li>
+                      <li><a class="dropdown-item" href="paginas/celulares.html#secsam">SAMSUMG</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="paginas/celulares.html">MOTOROLA Y XIAOMI</a></li>
+                      <li><a class="dropdown-item" href="paginas/celulares.html#secmx">MOTOROLA Y XIAOMI</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
