--- a/paginas/accesorios.html
+++ b/paginas/accesorios.html
@@ -27,8 +27,8 @@
                   ACCESORIOS
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                  <li><a class="dropdown-item" href="accesorios.html">PC</a></li>
-                  <li><a class="dropdown-item" href="accesorios.html">CELULAR</a></li>
+                  <li><a class="dropdown-item" href="accesorios.html#secpc">PC</a></li>
+                  <li><a class="dropdown-item" href="accesorios.html#seccel">CELULAR</a></li>
                   
                 </ul>
               <li class="nav-item">
@@ -39,10 +39,10 @@
                   CELULARES
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                  <li><a class="dropdown-item" href="celulares.html">APPLE</a></li>
-                  <li><a class="dropdown-item" href="celulares.html">SAMSUMG</a></li>
+                  <li><a class="dropdown-item" href="celulares.html#secapp">APPLE</a></li>
+                  <li><a class="dropdown-item" href="celulares.html#secsam">SAMSUMG</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="celulares.html">MOTOROLA Y XIAOMI</a></li>
+                  <li><a class="dropdown-item" href="celulares.html#secmx">MOTOROLA Y XIAOMI</a></li>
                 </ul>
               </li>
               <li class="nav-item">
